(library
 (name benchers)
 (public_name kobe.benchers)
 (modules :standard)
 (libraries kobecore
    kobe.solvers kobe.generators kobe.parsers.scheduling
    absolute.core absolute.fixpoint absolute.lang absolute.bounds
    absolute.domains absolute.box absolute.octagon absolute.sat
    absolute.event_loop absolute.direct_product absolute.delayed_product
    absolute.logic_completion absolute.propagator_completion)
  (flags :standard)
  (ocamlopt_flags (:standard -O3))
)
